use go tools, swagger fix, product list handler
